# Advent-of-Code

./: .gitignore  README.md
1/: Cargo.toml  main.rs
2019/day01/: CMakeLists.txt
2019/day03/: CMakeLists.txt
2019/day12/: CMakeLists.txt
2019/day16/: CMakeLists.txt
2019/template/: CMakeLists.txt
2019/template/src/: main.cpp
2019/template/template/: CMakeLists.txt
2019/template/template/src/: main.cpp
2020/day01/: main.go
2020/day02/: main.go
2020/day03/: main.go
2020/day04/: main.go
2020/day05/: main.go
2020/day06/: main.go
2020/day07/: main.go
2020/day08/: main.go
2020/day09/: main.go
2020/day10/: main.go
2020/day11/: main.go
2020/day12/: main.go
2020/day13/: main.go
2020/day14/: main.go
2020/day15/: main.go
2020/day16/: main.go
2020/day17/: main.go
2020/day18/: main.go
2020/day19/: main.go
2020/day20/: main.go
2020/day21/: main.go
2020/day22/: main.go
2020/day23/: main.go
2020/day24/: main.go
2020/day25/: main.go
2020/template/: go.mod  template.go
2021/: .gitignore  README.md
2021/day15/: Cargo.toml
2021/day18/: Cargo.toml
2021/day19/: Cargo.toml
2021/day20/: main.py
2021/day21/: Cargo.toml
2021/day24/: main.py
2021/template/: Cargo.toml
2022/day09/: build.zig  build.zig.zon
2022/day12/: build.zig
2022/day16/: build.zig
2022/day21/: solve.py
2022/template/: build.zig  build.zig.zon  template
2023/day21/: dune-project
2023/template/: dune-project
2024/day01/: main.py
2024/day02/: main.py
2024/day03/: main.py
2024/day04/: main.py
day01/: Cargo.toml
day1/: main.rs
(+151 files in other folders)
